<resources>
    <string name="app_name">Moje Wydatki</string>
    <string name="navigation_drawer_open">Otwarta szuflada nawigacji</string>
    <string name="navigation_drawer_close">Zamknięta szuflada nawigacji</string>
    <string name="text_home">Moje wydatki</string>
    <string name="menu_home">Moje wydatki</string>
    <string name="menu_konto">Dodaj konto</string>
    <string name="menu_przeglad">Przegląd</string>
    <string name="menu_wydatek">Dodaj wydatek</string>
    <string name="menu_kategorie">Kategorie</string>
    <string name="menu_podsumowanie">Podsumowanie</string>
    <string name="dodaj_wydatek_kwota">Kwota</string>
    <string name="dodaj_wydatek_wplyw">Wpływ</string>
    <string name="dodaj_wydatek_wydatek">Wydatek</string>
    <string name="podusmowanie_wplywy">Wpływy ⇑</string>
    <string name="podsumowanie_wydatki">Wydatki ⇓</string>
    <string name="podsumowanie_bilans">Bilans Σ</string>
    <string name="dodaj_wydatek_data">Data</string>
    <string name="dodaj_wydatek_notatka">Notatka</string>
    <string name="konta">Konta</string>
    <string name="dodaj_wydatek_konto">Konto</string>
    <string name="dodaj_wydatek_zdjecie">Zdjęcie paragonu</string>
    <string name="dodaj_wydatek_tytul">Tytuł</string>
    <string name="dodaj_wydatek_kategoria">Kategoria</string>
    <string name="dodaj">Dodaj</string>
    <string name="anuluj">Anuluj</string>
    <string name="konto">Nazwa konta</string>
    <string name="saldo_poczatkowe">Saldo początkowe</string>
    <string name="saldo_konta">Saldo</string>
    <string name="kategorie_nazwa_kategorii">Nazwa kategorii</string>
    <string name="podsumowanie_nw">Najwięcej wydatków w kategorii</string>
    <string name="podaj_date">kliknij by wybrać datę</string>
    <string name="dodaj_konto">kliknij by wybrać konto</string>
    <string name="dodaj_kategorie">kliknij by wybrać kategorię</string>

</resources>
