<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mojewydatki.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_przeglad"
        android:name="com.example.mojewydatki.ui.przeglad.PrzegladFragment"
        android:label="@string/menu_przeglad" />

    <fragment
        android:id="@+id/nav_wydatek"
        android:name="com.example.mojewydatki.ui.wydatek.WydatekFragment"
        android:label="@string/menu_wydatek"
        tools:layout="@layout/fragment_wydatek" />

    <fragment
        android:id="@+id/nav_konto"
        android:name="com.example.mojewydatki.ui.konto.KontoFragment"
        android:label="@string/menu_konto" />

    <fragment
        android:id="@+id/nav_kategorie"
        android:name="com.example.mojewydatki.ui.kategorie.KategorieFragment"
        android:label="@string/menu_kategorie"
        tools:layout="@layout/fragment_kategorie" />

    <fragment
        android:id="@+id/nav_podsumowanie"
        android:name="com.example.mojewydatki.ui.podsumowanie.PodsumowanieFragment"
        android:label="@string/menu_podsumowanie"
        tools:layout="@layout/fragment_podsumowanie" />
</navigation>