<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wydatek"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/kat_nazwa_textedit"
            android:layout_width="195dp"
            android:layout_height="38dp"
            android:layout_marginTop="14dp"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/categoryTitle_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/konto_saldop_textView"
            android:layout_width="77dp"
            android:layout_height="27dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="48dp"
            android:text="@string/dodaj_wydatek_kwota"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryTitle_textView" />


        <EditText
            android:id="@+id/konto_nazwa_textedit"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="23dp"
            android:digits="0123456789,."
            android:ems="10"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/payCategory_textedit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kat_nazwa_textedit" />

        <TextView
            android:id="@+id/categoryTitle_textView"
            android:layout_width="77dp"
            android:layout_height="27dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/dodaj_wydatek_tytul"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/konto_nazwa_textedit"
            app:layout_constraintTop_toBottomOf="@+id/kat_nazwa_textedit">

            <RadioButton
                android:id="@+id/radioButton_wplyw"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="@string/dodaj_wydatek_wplyw" />

            <RadioButton
                android:id="@+id/radioButton_wydatek"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="@string/dodaj_wydatek_wydatek" />
        </RadioGroup>

        <EditText
            android:id="@+id/payCategory_textedit"
            android:layout_width="195dp"
            android:layout_height="38dp"
            android:layout_marginTop="23dp"

            android:editable="false"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/payCategory_textView"
            app:layout_constraintTop_toBottomOf="@+id/konto_nazwa_textedit" />

        <TextView
            android:id="@+id/payCategory_textView"
            android:layout_width="77dp"
            android:layout_height="27dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="34dp"
            android:text="@string/dodaj_wydatek_kategoria"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/konto_saldop_textView" />

        <TextView
            android:id="@+id/payDate_textView"
            android:layout_width="77dp"
            android:layout_height="27dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/dodaj_wydatek_data"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payCategory_textView" />

        <TextView
            android:id="@+id/payDate_textedit"
            android:layout_width="185dp"
            android:layout_height="27dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"


            android:ems="10"
            android:inputType="date"
            android:text="@string/podaj_date"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/payDate_textView"
            app:layout_constraintTop_toBottomOf="@+id/payCategory_textedit" />

        <TextView
            android:id="@+id/payKonto_textView"
            android:layout_width="77dp"
            android:layout_height="27dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="34dp"
            android:text="@string/dodaj_wydatek_konto"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payDate_textView" />

        <EditText
            android:id="@+id/payKonto_textedit"
            android:layout_width="195dp"
            android:layout_height="38dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payDate_textedit" />

        <TextView
            android:id="@+id/payNotatka_textView"
            android:layout_width="77dp"
            android:layout_height="27dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/dodaj_wydatek_notatka"

            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payKonto_textView" />

        <EditText
            android:id="@+id/payNotatka_textedit"
            android:layout_width="195dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/payNotatka_textView"
            app:layout_constraintTop_toBottomOf="@+id/payKonto_textedit" />

        <TextView
            android:id="@+id/payZdjecie_textView"
            android:layout_width="77dp"
            android:layout_height="42dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="76dp"
            android:text="@string/dodaj_wydatek_zdjecie"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payNotatka_textView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="195dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/payZdjecie_textView"
            app:layout_constraintTop_toBottomOf="@+id/payNotatka_textedit"
            tools:srcCompat="@tools:sample/backgrounds/scenic[8]" />

        <Button
            android:id="@+id/dodaj_wydatek_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/dodaj"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/anuluj_wydatek_button"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/anuluj_wydatek_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="205dp"
            android:layout_marginTop="14dp"
            android:text="@string/anuluj"
            app:layout_constraintEnd_toStartOf="@+id/dodaj_wydatek_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>