<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/konto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="14dp"
        android:paddingTop="14dp"
        android:paddingRight="14dp"
        >

        <TextView
            android:id="@+id/konto_saldop_textView"
            android:layout_width="130dp"
            android:layout_height="27dp"

            android:text="@string/saldo_poczatkowe"
            android:textSize="14sp"

            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryTitle_textView" />

        <EditText
            android:id="@+id/kat_nazwa_textedit"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:digits="0123456789,."
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="14dp"
        android:paddingTop="14dp"
        android:paddingRight="14dp"
        >

        <TextView
            android:id="@+id/categoryTitle_textView"
            android:layout_width="130dp"
            android:layout_height="27dp"

            android:text="@string/konto"
            android:textSize="14sp"

            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/konto_nazwa_textedit"
            android:layout_width="195dp"
            android:layout_height="38dp"
            android:inputType="text"

            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kat_nazwa_textedit" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingRight="14dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/anuluj_konto_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/anuluj" />

        <Button
            android:id="@+id/dodaj_konto_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/colorAccent"
            android:text="@string/dodaj"
            android:textColor="#FFFFFF" />

    </LinearLayout>


</LinearLayout>

